<resources>
    <string name="app_name">Rent-A-Book</string>
    <string name="appTitle">Rent a Read</string>

    <string name="noaccounttext">Don"'"t have an account?</string>
    <string name="textsignup">Click here!</string>
    <string name="email">Email</string>
    <string name="pass">Password</string>
    <string name="signin">Log in</string>
    <string name="GenreButton">Add Genre</string>
    <string name="AddPhotoButton">Add Photo</string>
    <string name="req_button">Request</string>
    <string name="editButton">Edit</string>

    <string name="RegisterFirst">First Name</string>
    <string name="RegisterLast">Last Name</string>
    <string name="RegisterPhone">Phone Number</string>
    <string name="RegisterEmail">Email</string>
    <string name="RegisterPassword">Password</string>
    <string name="RegisterSignUp">Sign Up</string>
    <string name="Cancel">Cancel</string>

    <string name="scan">Scan</string>
    <string name="fetch">Fetch</string>
    <string name="Description">Description</string>
    <string name="Author">Author</string>
    <string name="Title">Title</string>
    <string name="ISBN">ISBN</string>
<<<<<<< HEAD

    <string name="ChooseGenre">Choose three genres</string>
    <string name="BookPhoto">Book Photo</string>
    <string name="BookOwner">Book Owner</string>
    <string name="BookStatus">Book Status</string>

    <string name="AddButton">+</string>
    <string name="CategoryTitle">Category</string>
    <string name="searchText">Search</string>
    <string name="title_activity_maps">Map</string>
    <string name="terrain_map">terrain_map</string>
    <string name="satellite_map">satellite_map</string>
    <string name="hybrid_map">hybrid_map</string>
    <string name="normal_map">normal_map</string>
    <string name="google_maps_key">AIzaSyAc556fiT2oUjs0rbz0o-KyW17Yrz8ruEM</string>
    <string name="western">Western</string>
    <string name="scifi">SciFi</string>
    <string name="mystery">Mystery</string>
    <string name="biography">Biography</string>
    <string name="hisfic">HisFic</string>
    <string name="adventure">Adventure</string>
    <string name="fantasy">Fantasy</string>
    <string name="horror">Horror</string>
    <string name="comic">Comic</string>
    <string name="romance">Romance</string>
    <string name="drama">Drama</string>
    <string name="comedy">Comedy</string>
    <string name="nonfiction">Nonfiction</string>
    <string name="ya">YA</string>
    <string name="thiller">Thiller</string>
    <string name="tragedy">Tragedy</string>
    <string name="poetry">Poetry</string>
    <string name="children_s">Children\'s</string>
    <string name="_1"><![CDATA[  1 ->]]></string>
    <string name="lt_2"><![CDATA[<- 2 ->]]></string>
    <string name="lt_3"><![CDATA[<- 3  ]]></string>
    <string name="done">Done</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="inbox">Inbox</string>
    <string name="profile">Profile</string>
    <string name="thriller">Thriller</string>
    <string name="request">Request</string>
    <string name="cancel">Cancel</string>
    <string name="requested">Requested</string>
    <string name="no_requests">No Requests</string>
    <string name="title">Title</string>
    <string name="author">Author</string>
    <string name="requestedby">RequestedBy</string>

=======
>>>>>>> c157c3a2ee4076250f4c6db129d797e8f1a0d38f
</resources>
