<?xml version="1.0" encoding="utf-8"?>

<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cardView"
    android:layout_width="match_parent"
    android:layout_height="150dp"
    android:layout_marginBottom="4dp"
    app:cardCornerRadius="4dp">


    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <ImageView
            android:id="@+id/bookPhoto"
            android:layout_width="125dp"
            android:layout_height="125dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:scaleType="centerCrop"
            android:contentDescription="@string/BookPhoto"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@drawable/go1984" />

        <TextView
            android:id="@+id/bookTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:ellipsize="end"
            android:lines="2"
            android:minLines="1"
            android:singleLine="false"
            android:text="@string/Title"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/bookPhoto"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Brooklyn Nine-Nine - Book Edition" />

        <TextView
            android:id="@+id/bookAuthor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/Author"
            app:layout_constraintStart_toEndOf="@+id/bookPhoto"
            app:layout_constraintTop_toBottomOf="@+id/bookTitle"
            tools:text="Author" />

        <TextView
            android:id="@+id/bookOwner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="116dp"
            android:text="@string/BookOwner"
            android:textSize="14sp"
            app:layout_constraintStart_toEndOf="@+id/bookPhoto"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Amy Santiago" />

        <TextView
            android:id="@+id/bookStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="116dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:text="@string/BookStatus"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Status" />

    </android.support.constraint.ConstraintLayout>
</android.support.v7.widget.CardView>