<?xml version="1.0" encoding="utf-8"?>

<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cardView"
    android:layout_width="match_parent"
    android:layout_height="150dp"
    android:layout_marginBottom="4dp"
    app:cardCornerRadius="6dp"
    app:cardElevation="0dp"
    app:cardPreventCornerOverlap="true">


    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <ImageView
            android:id="@+id/userPhoto"
            android:layout_width="125dp"
            android:layout_height="125dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/BookPhoto"
            android:scaleType="centerCrop"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@drawable/go1984" />

        <TextView
            android:id="@+id/bookTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:ellipsize="end"
            android:lines="2"
            android:minLines="1"
            android:singleLine="false"
            android:text="@string/Title"
            android:textSize="16sp"
            app:layout_constraintEnd_toStartOf="@+id/accept_fab"
            app:layout_constraintStart_toEndOf="@+id/userPhoto"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Brooklyn Nine-Nine - Book Edition" />

        <TextView
            android:id="@+id/bookAuthor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/Author"
            app:layout_constraintStart_toEndOf="@+id/userPhoto"
            app:layout_constraintTop_toBottomOf="@+id/bookTitle"
            tools:text="Author" />

        <TextView
            android:id="@+id/bookOwner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="116dp"
            android:text="@string/BookOwner"
            android:textSize="14sp"
            app:layout_constraintStart_toEndOf="@+id/userPhoto"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Amy Santiago" />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/accept_fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:src="@drawable/checkmark_icon"
            app:backgroundTint="@color/lightOlive"
            app:elevation="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:maxImageSize="35dp"
            app:pressedTranslationZ="0dp" />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/reject_fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:src="@drawable/x_icon"
            app:backgroundTint="@color/pastelPink"
            app:elevation="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/accept_fab"
            app:pressedTranslationZ="12dp" />

    </android.support.constraint.ConstraintLayout>
</android.support.v7.widget.CardView>